--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ header {
     position: fixed;
     z-index: 99;
     width: 100%;
+    box-shadow: 0 2px 2px #3a3a3a;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
@@ -116,5 +117,17 @@ footer {
 
     .nav-toggle-label {
         display: none;
+    }
+
+    #logo {
+        font-size: 280%;
+        line-height: 75px;
+        margin: 0 0.5rem;
+    }
+
+    /* Main content */
+    main {
+        /* Push main content down to accommodate larger header */
+        margin-top: 79px;
     }
 }
