--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,6 @@ nav {
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
     top: 100%;
-
 }
 
 /* Nav toggle */
@@ -89,6 +88,7 @@ main {
     flex: 1 0 auto;
     margin-top: 47px;
 }
+
  /* Hero section styles */
  #hero {
     height: 600px;
@@ -113,6 +113,33 @@ main {
     color: #ffffff;
 }
 
+ /* Reasons section styles */
+ #reasons {
+    width: 90%;
+    margin: 20px auto;
+ }
+
+ #reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 280%;
+ }
+
+ #benefits-mental > div, 
+ #benefits-physical > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+ }
+
+ #benefits p {
+    padding: 0 20px;
+ }
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+ }
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -125,7 +152,7 @@ main {
 #social-networks i {
     font-size: 160%;
     padding: 5%;
-    color: #3a3a3a
+    color: #3a3a3a;
 }
 
 /* Media query: tablets and larger (768px and up) */
@@ -157,7 +184,6 @@ main {
         margin: 0 0.5rem;
     }
     
-
     /* Main content */
     main {
         /* Push main content down to accommodate larger header */
