Add gallery column increase for larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,6 +213,14 @@ main {
     color: #3a3a3a;
 }
 
+/* Media query: Landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -252,6 +260,11 @@ main {
         width: 300px;
         right: 50px;
     }
+
+    /* Gallery */
+    #photos {
+        column-count: 3;
+    }
 }
 
 /* reasons section */
@@ -276,6 +289,11 @@ main {
 @media screen and (min-width: 992px) {
     #menu a:hover {
             border-bottom: 1px solid #3a3a3a;
+    }
+
+    /* Gallery */
+    #photos {
+        column-count: 4;
     }
 }
 
